--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,28 @@
 body {
   margin: 0;
+  padding: 0;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: grey;
+  height: 100vh;
+}
+
+.container-tierlist {
+  background-color: green;
+  width: 850px;
+  height: 70%;
+}
+
+.container-options {
+  display: flex;
+}
+
+p {
+  padding: 0px 16px;
+  margin: 0px 8px;
 }
