--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,54 @@
 body {
   margin: 0;
   padding: 0;
+  font-size: 62.5%;
+  box-sizing: border-box;
 }
 
 .main {
+  width: auto;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: grey;
-  height: 100vh;
+}
+.container {
+  /* height: 70%; */
+  width: 65%;
+  display: grid;
+  grid-template-columns: 20% 80%;
 }
 
 .container-tierlist {
   display: flex;
-  flex-direction: column;
-  height: 70%;
-  width: 850px;
+  flex-direction: row;
+  height: auto;
   background-color: green;
 }
 
 .container-options {
-  display: flex;
+  margin: 2px 2px;
 }
 
 p {
   padding: 0px 16px;
   margin: 0px 8px;
 }
+
 input {
-  height: 20%;
-  width: 20%;
+  font-size: 2rem;
+  text-align: center;
 }
+
 .dumb-item {
   width: 50%;
+}
+
+.tiers {
+  height: 7rem;
+  width: auto;
 }
 
 #S {
