--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
   width: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
 }
 .container {
   /* height: 70%; */
@@ -19,6 +19,15 @@ body {
   grid-template-columns: 20% 80%;
   color: #000;
   padding: 20px 0px 40px;
+  margin-left: 10rem;
+  margin-right: 5rem;
+}
+.scroll-container {
+  width: 39.5%;
+  max-height: 580px;
+  margin: 1rem 10rem 3rem 5rem;
+  border: 2px solid red;
+  background-color: white;
 }
 
 .container-tierlist {
@@ -27,7 +36,7 @@ body {
   height: auto;
   background-color: #000;
   border-bottom: 2px solid #333;
-  padding: 4px 0px;
+  padding: 8px 0px;
 }
 
 .container-options {
@@ -35,8 +44,26 @@ body {
 }
 
 p {
-  padding: 0px 16px;
-  margin: 0px 8px;
+  background-color: cornsilk;
+  font-size: 1.5rem;
+  margin: auto;
+  padding: 2px 0px;
+  font-family: "Source Code Pro", monospace;
+}
+
+.scroll-title {
+  /* position: fixed; */
+  /* width: inherit; */
+  /* margin: inherit; */
+  /* width: max-content; */
+  background-color: rgb(67, 67, 67);
+  color: white;
+  font-weight: 700;
+  text-align: center;
+}
+.scroll-content {
+  max-height: 546px;
+  overflow-y: scroll;
 }
 
 input {
