--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 }
 p {
   background-color: cornsilk;
-  font-size: 1.5rem;
+  font-size: 1rem;
   margin: auto;
   padding: 2px 0px;
   font-family: "Source Code Pro", monospace;
@@ -29,10 +29,14 @@ input {
   font-size: 1rem;
   text-align: center;
 }
+input[type="text"] {
+  border: 1px solid rgb(17 17 19);
+  border-bottom: 2px solid #333;
+}
 
 img {
-  height: 100px;
-  width: 100px;
+  height: 77px;
+  width: 90px;
 }
 
 .main {
@@ -48,7 +52,7 @@ img {
   grid-template-columns: 20% 80%;
   color: #000;
   padding: 20px 0px 40px;
-  margin-left: 10rem;
+  margin-left: 5rem;
   margin-right: 5rem;
 }
 
@@ -58,7 +62,7 @@ img {
   height: auto;
   background-color: rgb(17 17 19);
   border-bottom: 2px solid #333;
-  padding: 8px 0px;
+  padding-top: 7px;
 }
 
 .container-options {
@@ -66,14 +70,14 @@ img {
 }
 
 .tiers {
-  height: 7rem;
+  height: 5.5rem;
   width: auto;
 }
 
 .scroll-container {
-  width: 39.5%;
+  width: 45.5%;
   max-height: 580px;
-  margin: 1.3rem 10rem 3rem 5rem;
+  margin: 1.3rem 5rem 3rem 5rem;
   background-color: rgb(32 33 36);
   border: 1px solid rgb(111 113 115);
   border-radius: 10px;
@@ -86,7 +90,7 @@ img {
   /* width: max-content; */
   background-color: rgba(41, 42, 45, 1);
   color: white;
-  font-weight: 700;
+  /* font-weight: 700; */
   text-align: center;
   padding: 0.5rem 0px;
   border-top-right-radius: 10px;
