--- a/styles.css
+++ b/styles.css
@@ -41,26 +41,18 @@ img {
   width: auto;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
 }
 
 .loader {
-  /* width: 100%; */
   height: 20vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* position: fixed; */
-  background: rgba(0, 0, 0, 0.5);
-  /* z-index: 1; */
 }
 
 .spinner {
   width: 100px;
   height: 100px;
-  /* border: 8px solid; */
-  /* border-color: #3d5af1 transparent #3d5af1 transparent; */
-  /* border-radius: 50%; */
   background: url("./public/uzumaki.svg");
   animation: spin-anim 1.2s linear infinite;
 }
@@ -94,9 +86,11 @@ img {
 }
 
 .container-options {
+  width: 95%;
   margin: 20px;
   border: 2px solid red;
-  width: 95%;
+  border-radius: 5px;
+  background: rgba(0, 0, 0, 0.9);
 }
 
 .tiers {
