--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,11 @@ img {
 }
 
 .container-options {
-  width: 95%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-self: center;
+  width: 94%;
   margin: 20px;
   border: 2px solid red;
   border-radius: 5px;
