--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ img {
   height: auto;
   background-color: rgb(17 17 19);
   border-bottom: 2px solid #333;
-  padding-top: 7px;
+  align-items: center;
 }
 
 .container-options {
@@ -98,7 +98,7 @@ img {
 }
 
 .tiers {
-  height: 5.5rem;
+  height: 6.5rem;
   width: auto;
 }
 
