--- a/styles.css
+++ b/styles.css
@@ -126,21 +126,21 @@ img {
 }
 
 #S-tier {
-  background-color: rgb(255, 127, 127);
+  background-color: #ff7f7f;
 }
 
 #A-tier {
-  background-color: rgb(255, 191, 127);
+  background-color: #ffbf7f;
 }
 
 #B-tier {
-  background-color: rgb(255, 223, 127);
+  background-color: #ffdf7f;
 }
 
 #C-tier {
-  background-color: rgb(255, 255, 127);
+  background-color: #ffff7f;
 }
 
 #D-tier {
-  background-color: rgb(191, 255, 127);
+  background-color: #bfff7f;
 }
