minor styles modified

--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,8 @@ img {
   flex-direction: row;
   flex-wrap: wrap;
   align-self: center;
-  width: 81.5%;
+  justify-content: center;
+  width: 82.5%;
   margin: 20px;
   border: 2px solid red;
   border-radius: 5px;
