WIP. span added dynamically to scroll-content console.
There are still very few things to polish. Check for D&Drop API to include insert and prepend logic to DOM elements, check for insertBefore and nextSibling, use pointers and event triggerer could be dragover, but targeting the img, not the container. How does the dragged element knows it is over another img that has o does not have siblings. source code for tiermaker?

--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,9 @@ body {
 }
 
 p {
-  color: cornsilk;
   font-size: 1rem;
   margin: auto;
-  padding: 2px 0px;
+  padding: 0px 0px 10px 8px;
   font-family: "Source Code Pro", monospace;
 }
 
@@ -144,4 +143,24 @@ img {
 
 #D-tier {
   background-color: #bfff7f;
+}
+
+#S-tier-span {
+  color: #ff7f7f;
+}
+
+#A-tier-span {
+  color: #ffbf7f;
+}
+
+#B-tier-span {
+  color: #ffdf7f;
+}
+
+#C-tier-span {
+  color: #ffff7f;
+}
+
+#D-tier-span {
+  color: #bfff7f;
 }
