minor refactor for styles and constants

--- a/styles.css
+++ b/styles.css
@@ -145,22 +145,22 @@ img {
   background-color: #bfff7f;
 }
 
-#S-tier-span {
+#S_tier-span {
   color: #ff7f7f;
 }
 
-#A-tier-span {
+#A_tier-span {
   color: #ffbf7f;
 }
 
-#B-tier-span {
+#B_tier-span {
   color: #ffdf7f;
 }
 
-#C-tier-span {
+#C_tier-span {
   color: #ffff7f;
 }
 
-#D-tier-span {
+#D_tier-span {
   color: #bfff7f;
 }
