wip media queries added for mobile cases

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,15 @@ html {
   background-size: cover;
 }
 
+/* @media screen and (min-width: 950px) {
+  body {
+    color: blue;
+  }
+  #S-tier {
+    color: red;
+  }
+} */
+
 body {
   margin: 0;
   padding: 0;
